Show current volume on outerbox mousewheel event too

--- a/.src/Form/OverlayTip.form
+++ b/.src/Form/OverlayTip.form
@@ -9,7 +9,7 @@
   SkipTaskbar = True
   Opacity = 75
   Arrangement = Arrange.Fill
-  { TextLabel1 TextLabel
+  { TextLabel1 Label
     MoveScaled(0,0,14,4)
     Background = &H000000&
     Foreground = &HFFFFFF&
