--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -1801,6 +1801,20 @@
             Delay = 100
           }
         }
+        { ThumbleBox Panel
+          MoveScaled(4,21,17,17)
+          Visible = False
+          Background = &H000000&
+          Arrangement = Arrange.Fill
+          Padding = 1
+          { Thumblevideo Panel
+            MoveScaled(3,2,11,9)
+          }
+        }
+      }
+      { TimerMoveThumble #Timer
+        #MoveScaled(17,43)
+        Delay = 100
       }
       { BottomVbox VBox
         MoveScaled(0,48,71,14)
