--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -80,6 +80,17 @@
             Value = CheckBox.True
           }
         }
+        { NoParse54 HBox
+          MoveScaled(2,12,48,5)
+          ToolTip = ("Enable the animated video preview\nwhen you drag the seekbar with the mouse.\n\nRequires more cpu power.")
+          Spacing = True
+          { SeekThumbsCheckbox CheckBox
+            MoveScaled(0,0,49,4)
+            Expand = True
+            Text = ("Show animated preview when seeking")
+            Value = CheckBox.True
+          }
+        }
       }
       Index = 1
       Text = ("Audio")
@@ -543,7 +554,7 @@
       Index = 6
       Text = ("Network")
       { ScrollView4 ScrollView
-        MoveScaled(1,1,58,53)
+        MoveScaled(1,1,58,60)
         Tag = "network"
         Expand = True
         Arrangement = Arrange.Vertical
@@ -683,8 +694,18 @@
             Text = ("Restart youtube stream instead of seeking")
           }
         }
+        { NoParse53 HBox
+          MoveScaled(2,45,51,5)
+          ToolTip = ("Enable the animated video preview\nwhen you drag the seekbar with the mouse.\n\n* Requires a fast network connection and more cpu power.")
+          Spacing = True
+          { SeekThumbsYoutubeCheckbox CheckBox
+            MoveScaled(0,0,49,4)
+            Expand = True
+            Text = ("Show animated preview when seeking")
+          }
+        }
         { NoParse35 HBox
-          MoveScaled(2,46,50,4)
+          MoveScaled(2,52,50,4)
           ToolTip = ("Choose how to download network streams\nsuch as youtube video and podcasts.\nkde4 - choose kioclient ; \nkde3 - choose kfmclient ; \nIf you wish to write your own downloader, \nremember that\n%url is the stream to download\n%destdir is the destination directory\n%destfile is the destination file (without the path)\n\nNote then kioclient and kfmclient do not work with youtubeì streams.")
           Spacing = True
           { Label13 Label labelcheck
@@ -701,7 +722,7 @@
           }
         }
         { NOPARSESEP5 Separator
-          MoveScaled(4,50,44,2)
+          MoveScaled(5,56,44,2)
         }
       }
       Index = 7
@@ -1398,7 +1419,7 @@
           }
         }
         { NoParse5 HBox
-          MoveScaled(1,17,50,4)
+          MoveScaled(2,25,50,4)
           ToolTip = ("Background image for the bottom panel.\nYou can also set this by dragging an image file or from a web page\ninto the bottom panel, just remember to save the profile.")
           Spacing = True
           { NoParseLabel6 Label
