--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -81,13 +81,26 @@
           }
         }
         { NoParse54 HBox
-          MoveScaled(2,12,48,5)
+          MoveScaled(3,12,48,5)
           ToolTip = ("Enable the animated video preview\nwhen you drag the seekbar with the mouse.\n\nRequires more cpu power.")
           Spacing = True
           { SeekThumbsCheckbox CheckBox
             MoveScaled(0,0,49,4)
             Expand = True
             Text = ("Show animated preview when seeking")
+            Value = CheckBox.True
+          }
+        }
+        { NoParse55 HBox
+          MoveScaled(2,18,48,5)
+          Visible = False
+          ToolTip = ("Use some tweaks to reduce cpu use.")
+          Spacing = True
+          Indent = True
+          { SeekThumbsLowFpsCheckbox CheckBox
+            MoveScaled(1,0,49,4)
+            Expand = True
+            Text = ("Reduce preview framerate")
             Value = CheckBox.True
           }
         }
@@ -564,6 +577,7 @@
         { NoParse26 HBox
           MoveScaled(0,1,48,4)
           ToolTip = ("Maximum cache size.\nMplayer option: -cache ")
+          AutoResize = True
           Spacing = True
           { NetCacheCheckbox CheckBox notifyobj
             Name = "NetCacheCheckbox"
@@ -585,6 +599,7 @@
         { NoParse32 HBox
           MoveScaled(0,6,50,4)
           ToolTip = ("The playback will start as soon as the cache has been filled enough.\nMplayer option: -cache-min")
+          AutoResize = True
           Spacing = True
           { NetminCacheCheckbox CheckBox notifyobj
             Name = "NetminCacheCheckbox"
@@ -610,8 +625,9 @@
           }
         }
         { NoParse34 HBox
-          MoveScaled(0,11,50,4)
+          MoveScaled(0,11,53,4)
           ToolTip = ("HINT: For youtube, enable this option and set 0.\n--\n If a seek is to be made to a position within <percentage> of the cache size from the current position, \nMPlayer will wait  for  the cache to be filled to this position rather than performing a stream seek (default: 50).\nMplayer option: -cache-seek-min <percentage>")
+          AutoResize = True
           Spacing = True
           { NetseekCacheCheckbox CheckBox notifyobj
             Name = "NetseekCacheCheckbox"
@@ -639,19 +655,21 @@
           MoveScaled(5,16,43,1)
         }
         { NoParse7 HBox
-          MoveScaled(0,20,51,5)
+          MoveScaled(0,18,51,4)
           ToolTip = ("Skip parsing media tags on network streams: \nuse it to add network media to library/playlist faster.\nThis will apply to the following uries: \nmms:// ; http:// ; http_proxy:// ; rtp:// ; rtsp:// ;\nftp:// ; udp:// ; smb:// ; mpst:// ; unsv://")
+          AutoResize = True
           Spacing = True
           { SlowTagsCHK CheckBox
-            MoveScaled(2,0,49,4)
+            MoveScaled(-1,0,49,4)
             Expand = True
             Text = ("Skip tags on network streams.")
             Value = CheckBox.True
           }
         }
         { NoParse15 HBox
-          MoveScaled(1,27,50,4)
+          MoveScaled(1,23,50,4)
           ToolTip = ("Use a proxy for http connections.\nEg: http://myproxy.mynetwork:myport\nNote that proxy authentication is not (yet?) supported by mplayer.")
+          AutoResize = True
           Spacing = True
           { HttpProxyCHK CheckBox notifyobj
             Name = "HttpProxyCHK"
@@ -664,12 +682,10 @@
             Expand = True
           }
         }
-        { NOPARSESEP7 Separator
-          MoveScaled(2,32,45,2)
-        }
         { NoParse33 HBox
-          MoveScaled(2,34,50,4)
+          MoveScaled(1,28,50,4)
           ToolTip = ("When playing youtube videos, \nprefer this format if available.")
+          AutoResize = True
           Spacing = True
           { Label10 Label labelcheck
             Name = "Label10"
@@ -684,9 +700,13 @@
             Text = ("360p")
           }
         }
+        { NOPARSESEP7 Separator
+          MoveScaled(2,32,45,2)
+        }
         { NoParse52 HBox
-          MoveScaled(2,39,51,5)
+          MoveScaled(0,34,51,5)
           ToolTip = ("Seeking on youtube streams may be problematic.\nChecking this will cause mplayer to be restarted at the new position \ninstead of issuing a seek.\nThis may or not work better for you.")
+          AutoResize = True
           Spacing = True
           { DoSeekRestartBox CheckBox
             MoveScaled(0,0,49,4)
@@ -695,8 +715,9 @@
           }
         }
         { NoParse53 HBox
-          MoveScaled(2,45,51,5)
+          MoveScaled(1,40,51,5)
           ToolTip = ("Enable the animated video preview\nwhen you drag the seekbar with the mouse.\n\n* Requires a fast network connection and more cpu power.")
+          AutoResize = True
           Spacing = True
           { SeekThumbsYoutubeCheckbox CheckBox
             MoveScaled(0,0,49,4)
@@ -704,9 +725,23 @@
             Text = ("Show animated preview when seeking")
           }
         }
+        { NoParse56 HBox
+          MoveScaled(2,45,48,5)
+          Visible = False
+          ToolTip = ("Use some tweaks to reduce cpu use.")
+          Spacing = True
+          Indent = True
+          { SeekThumbsYoutubeLowFpsCheckbox CheckBox
+            MoveScaled(1,0,49,4)
+            Expand = True
+            Text = ("Reduce preview framerate")
+            Value = CheckBox.True
+          }
+        }
         { NoParse35 HBox
-          MoveScaled(2,52,50,4)
+          MoveScaled(1,51,50,4)
           ToolTip = ("Choose how to download network streams\nsuch as youtube video and podcasts.\nkde4 - choose kioclient ; \nkde3 - choose kfmclient ; \nIf you wish to write your own downloader, \nremember that\n%url is the stream to download\n%destdir is the destination directory\n%destfile is the destination file (without the path)\n\nNote then kioclient and kfmclient do not work with youtubeì streams.")
+          AutoResize = True
           Spacing = True
           { Label13 Label labelcheck
             Name = "Label13"
@@ -722,7 +757,7 @@
           }
         }
         { NOPARSESEP5 Separator
-          MoveScaled(5,56,44,2)
+          MoveScaled(3,61,44,2)
         }
       }
       Index = 7
