Disable vdpau overlay surface by default (new option in vdpau driver window)

--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -420,6 +420,17 @@
             Text = ("Disable Kde Effects in fullscreen mode")
           }
         }
+        { vdpauoverlaybox HBox
+          MoveScaled(2,21,45,6)
+          Visible = False
+          ToolTip = ("vdpau need some codecs to be loaded,\nchecking this will auto add: \nffmpeg12vdpau, ffh264vdpau, ffwmv3vdpau, ffvc1vdpau")
+          { vdpauooverlaycheck CheckBox
+            MoveScaled(1,1,43,4)
+            ToolTip = ("Using vdpau overlay surface may lead to instability problems under some circumstances \nlike heavy cpu load or switching to/from fullscreen.\n\nNOT using vdpau overlay may cause tearing.\n\nIf you experience tearing, try to disable this option, if you experience instability,\ntry to check it.\n\nThis option disable the overlay surface by setting the environment variable:\nVDPAU_NVIDIA_NO_OVERLAY=1")
+            Text = ("Disable VDPAU overlay surface")
+            Value = CheckBox.True
+          }
+        }
       }
       Index = 4
       Text = ("Audio CD")
