--- a/.src/Form/XConfigureVideoDriver.form
+++ b/.src/Form/XConfigureVideoDriver.form
@@ -340,9 +340,10 @@
           Expand = True
           Arrangement = Arrange.Vertical
           Border = False
-          { vdpauHBox6 HBox
+          { vdpauHBox6 VBox
             MoveScaled(0,0,45,6)
             ToolTip = ("vdpau need some codecs to be loaded,\nchecking this will auto add: \nffmpeg12vdpau, ffh264vdpau, ffwmv3vdpau, ffvc1vdpau")
+            AutoResize = True
             Padding = 8
             { AddVdpauCHK CheckBox
               MoveScaled(1,1,43,4)
@@ -351,7 +352,7 @@
             }
           }
           { vdpauParseMeHBox1 HBox
-            MoveScaled(0,6,45,6)
+            MoveScaled(0,13,45,6)
             Padding = 8
             { CheckBox21 CheckBox
               MoveScaled(1,1,17,4)
@@ -367,7 +368,7 @@
             }
           }
           { vdpauParseMeHBox2 HBox
-            MoveScaled(0,12,45,6)
+            MoveScaled(0,19,45,6)
             Padding = 8
             { CheckBox22 CheckBox
               MoveScaled(1,1,17,4)
@@ -383,7 +384,7 @@
             }
           }
           { vdpauParseMeHBox3 HBox
-            MoveScaled(0,18,45,6)
+            MoveScaled(0,25,45,6)
             Padding = 8
             { CheckBox23 CheckBox
               MoveScaled(1,1,17,4)
@@ -399,7 +400,7 @@
             }
           }
           { vdpauParseMeHBox4 HBox
-            MoveScaled(0,25,45,5)
+            MoveScaled(0,32,45,5)
             Padding = 8
             { CheckBox24 CheckBox
               MoveScaled(1,0,18,4)
@@ -408,7 +409,7 @@
             }
           }
           { vdpauParseMeHBox5 HBox
-            MoveScaled(0,30,45,5)
+            MoveScaled(0,37,45,5)
             Padding = 8
             { CheckBox25 CheckBox
               MoveScaled(1,0,18,4)
@@ -417,7 +418,7 @@
             }
           }
           { vdpauParseMeHBox6 HBox
-            MoveScaled(0,36,45,6)
+            MoveScaled(0,43,45,6)
             Padding = 8
             { CheckBox26 CheckBox
               MoveScaled(1,1,17,4)
@@ -433,7 +434,7 @@
             }
           }
           { vdpauParseMeHBox7 HBox
-            MoveScaled(0,42,45,6)
+            MoveScaled(0,49,45,6)
             Padding = 8
             { CheckBox27 CheckBox
               MoveScaled(1,1,17,4)
@@ -449,7 +450,7 @@
             }
           }
           { vdpauParseMeHBox8 HBox
-            MoveScaled(0,48,45,5)
+            MoveScaled(0,55,45,5)
             Padding = 8
             { CheckBox28 CheckBox
               MoveScaled(1,0,18,4)
@@ -458,7 +459,7 @@
             }
           }
           { vdpauParseMeHBox9 HBox
-            MoveScaled(0,53,45,6)
+            MoveScaled(0,60,45,6)
             Padding = 8
             { CheckBox29 CheckBox
               MoveScaled(1,1,18,4)
