--- a/.src/Form/AskName.form
+++ b/.src/Form/AskName.form
@@ -1,24 +1,24 @@
 # Gambas Form File 3.0
 
-{ Form Form 
-  MoveScaled(0,0,30,11)
+{ Form Form
+  MoveScaled(0,0,32,11)
   Text = ("Profile name:")
   Icon = Picture["icon:/16/properties"]
   Persistent = True
   Resizable = False
-  Spacing = 4
+  Spacing = True
   Padding = 4
-  { ProfileNameBox TextBox 
-    MoveScaled(1,1,28,4)
+  { ProfileNameBox TextBox
+    MoveScaled(1,1,30,4)
     Text = ("NewProfile")
   }
-  { CancelBtn Button 
-    MoveScaled(1,6,13,4)
+  { CancelBtn Button
+    MoveScaled(1,6,14,4)
     Text = ("Cancel")
     Picture = Picture["icon:/16/cancel"]
   }
-  { OkBtn Button 
-    MoveScaled(16,6,13,4)
+  { OkBtn Button
+    MoveScaled(17,6,14,4)
     Text = ("Ok")
     Picture = Picture["icon:/16/ok"]
   }
