--- a/.src/Form/AudioVideoCodecs.form
+++ b/.src/Form/AudioVideoCodecs.form
@@ -159,18 +159,21 @@
   { OkBTN Button
     MoveScaled(56,48,13.5714,3.7143)
     ToolTip = ("Close the window")
+    AutoResize = True
     Text = ("Close")
     Picture = Picture["icon:/16/cancel"]
   }
   { ApplyBTN Button
     MoveScaled(29,48,13.5714,3.7143)
     ToolTip = ("Use new settings without save")
+    AutoResize = True
     Text = ("Use ")
     Picture = Picture["icon:/16/redo"]
   }
   { SaveBTN Button
     MoveScaled(2,48,13.5714,3.7143)
     ToolTip = ("Save and use new settings")
+    AutoResize = True
     Text = ("Save")
     Picture = Picture["icon:/16/save"]
   }
