--- a/.src/Form/AFiltersCfg.form
+++ b/.src/Form/AFiltersCfg.form
@@ -44,7 +44,7 @@
       }
     }
     { VSplit1 VSplit
-      MoveScaled(21,1,64,65)
+      MoveScaled(22,1,64,65)
       { TabStrip1 TabStrip
         MoveScaled(4,3,64,44)
         Expand = True
@@ -262,8 +262,14 @@
         }
         Index = 0
       }
+      { ButtonLadspaHelper Button
+        MoveScaled(0,24,4,4)
+        Visible = False
+        ToolTip = ("Show a tool that helps you to compile ladspa filter parameters.\nIf you don't use ladspa, just don't push it.")
+        Picture = Picture["icon:/16/component"]
+      }
       { DescriptionArea TextArea
-        MoveScaled(1,45,64,20)
+        MoveScaled(-2,44,64,20)
         Tag = "Filter description from mplayer manual"
         Expand = True
         Text = ("TextArea1")
