--- a/.src/Form/AudioForm.form
+++ b/.src/Form/AudioForm.form
@@ -115,7 +115,7 @@
             { Label2 Label AudioAreaGroup
               Name = "Label2"
               Move(14,14,98,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -125,7 +125,7 @@
             { Label3 Label AudioAreaGroup
               Name = "Label3"
               Move(14,35,98,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -135,7 +135,7 @@
             { Label4 Label AudioAreaGroup
               Name = "Label4"
               Move(14,56,98,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -145,7 +145,7 @@
             { Label5 Label AudioAreaGroup
               Name = "Label5"
               Move(14,77,98,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -155,7 +155,7 @@
             { Label6 Label AudioAreaGroup
               Name = "Label6"
               Move(14,98,98,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -164,9 +164,18 @@
             }
             { HBox11 HBox AudioAreaGroup
               Name = "HBox11"
-              Move(14,154,98,21)
+              Move(7,119,98,21)
               Tracking = True
               Expand = True
+            }
+            { Label17 Label
+              Move(7,147,98,28)
+              Font = Font["Bold,12"]
+              Background = &H000000&
+              Foreground = &HFFFFFF&
+              Tracking = True
+              AutoResize = True
+              Text = ("Lyrics")
             }
           }
           { VBox2 VBox AudioAreaGroup
@@ -186,7 +195,7 @@
             { Label12 Label AudioAreaGroup
               Name = "Label12"
               Move(14,14,21,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -194,7 +203,7 @@
             { Label13 Label AudioAreaGroup
               Name = "Label13"
               Move(14,35,21,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -202,7 +211,7 @@
             { Label14 Label AudioAreaGroup
               Name = "Label14"
               Move(14,56,21,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -210,7 +219,7 @@
             { Label15 Label AudioAreaGroup
               Name = "Label15"
               Move(14,77,14,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -218,16 +227,22 @@
             { Label16 Label AudioAreaGroup
               Name = "Label16"
               Move(14,105,14,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
             }
             { HBox12 HBox AudioAreaGroup
               Name = "HBox12"
-              Move(7,161,28,21)
+              Move(0,126,49,21)
               Tracking = True
               Expand = True
+            }
+            { PictureBox2 PictureBox
+              Move(14,147,24,24)
+              Foreground = &H000000&
+              Picture = Picture["icon:/22/microphone"]
+              Alignment = Align.Left
             }
           }
         }
@@ -249,7 +264,7 @@
               Name = "Label11"
               Move(14,0,98,28)
               Visible = False
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -258,7 +273,7 @@
             { Label10 Label AudioAreaGroup
               Name = "Label10"
               Move(14,28,98,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -267,7 +282,7 @@
             { Label9 Label AudioAreaGroup
               Name = "Label9"
               Move(14,49,98,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -276,7 +291,7 @@
             { Label8 Label AudioAreaGroup
               Name = "Label8"
               Move(14,77,98,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -285,7 +300,7 @@
             { Label7 Label AudioAreaGroup
               Name = "Label7"
               Move(14,98,98,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -304,7 +319,7 @@
             { RadioLabel Label AudioAreaGroup
               Name = "RadioLabel"
               Move(14,0,182,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -312,7 +327,7 @@
             { Label18 Label AudioAreaGroup
               Name = "Label18"
               Move(14,28,182,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -320,7 +335,7 @@
             { Label19 Label AudioAreaGroup
               Name = "Label19"
               Move(14,49,182,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -328,7 +343,7 @@
             { Label20 Label AudioAreaGroup
               Name = "Label20"
               Move(14,77,175,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
@@ -336,7 +351,7 @@
             { Label21 Label AudioAreaGroup
               Name = "Label21"
               Move(14,98,182,28)
-              Font = Font["Bold,13"]
+              Font = Font["Bold,12"]
               Background = &H000000&
               Foreground = &HFFFFFF&
               Tracking = True
