--- a/.src/Form/FormLyrics.form
+++ b/.src/Form/FormLyrics.form
@@ -15,6 +15,7 @@
       AutoResize = True
       Text = ("Next")
       Picture = Picture["icon:/22/next"]
+      Border = False
     }
     { Separator3 Separator
       MoveScaled(11,0,2,4)
@@ -26,10 +27,12 @@
     { ButtonZoomOut Button
       MoveScaled(72,0,4,3.1429)
       Picture = Picture["icon:/22/zoom-out"]
+      Border = False
     }
     { ButtonZoomIn Button
       MoveScaled(79,0,4,3.1429)
       Picture = Picture["icon:/22/zoom-in"]
+      Border = False
     }
   }
   { Panel1 ScrollView
@@ -82,6 +85,7 @@
       AutoResize = True
       Text = ("New search")
       Picture = Picture["icon:/22/find"]
+      Border = False
     }
   }
 }
